agregado hosting de firebase

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,8 @@
   <style>
 
     /* todo el estilo es para el spinner del principio */
-
+    /* la referencia esta aca https://devblog.dymel.pl/2017/10/17/angular-preload/ */
+    
     .spinner {
       height: 100%;
       background-color: var(--green-light);
