primeros cambios en tema a Queo. Barra de nav se oculta al bajar y muestra al subir

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     
     .spinner {
       height: 100%;
-      background-color: var(--green-light);
+      background-color: white;
       display: flex;
       flex-direction: column;
       justify-content: center;
