--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>QuadriWeb</title>
+  <title>Queo New</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="./assets/images/faviconQuadri.ico">
+  <link rel="icon" type="image/x-icon" href="./assets/images/queo.ico">
 
   <style>
 
