--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,16 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <!-- Google Tag Manager -->
+  <script>
+    (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-W3QCZL2');
+  </script>
+      <!-- End Google Tag Manager -->
+
   <meta charset="utf-8">
   <title>Queo</title>
   <base href="/">
@@ -112,6 +122,13 @@
   </style>
 </head>
 <body>
+  <!-- Google Tag Manager (noscript) -->
+  <noscript>
+    <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W3QCZL2"
+    height="0" width="0" style="display:none;visibility:hidden">
+    </iframe>
+  </noscript>
+  <!-- End Google Tag Manager (noscript) -->
   <app-root>
 
     <!-- lo que sigue abajo sera removido una vez que la aplicacion termine de cargar -->
@@ -125,7 +142,7 @@
     </div>
 
   </app-root>
-  <script>
+  <!-- <script>
     (function(i, s, o, g, r, a, m) {
           i['GoogleAnalyticsObject'] = r;
           i[r] = i[r] || function() {
@@ -139,6 +156,6 @@
       })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
     ga('create', 'UA-109092828-1', 'auto');// add your tracking ID here.
     // ga('send', 'pageview');
-  </script>
+  </script> -->
 </body>
 </html>
